KubernetesDeployment/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final
  labels:
    istio-injection: enabled
