KubernetesDeployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
  namespace: final
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
        version: 0.0.1
    spec:
      serviceAccountName: delivery-service
      containers:
        - name: delivery-service
          image: "redestroyder/delivery-service:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: final
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
        version: 0.0.1
    spec:
      serviceAccountName: product-service
      containers:
        - name: product-service
          image: "redestroyder/product-service:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deployment
  namespace: final
  labels:
    app: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
        version: 0.0.2
    spec:
      serviceAccountName: billing-service
      containers:
        - name: billing-service
          image: "redestroyder/billing-service:0.0.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
  namespace: final
  labels:
    app: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
        version: 0.2.0
    spec:
      serviceAccountName: authentication-service
      containers:
        - name: authentication-service
          image: "redestroyder/authentication-service:0.2.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  namespace: final
  labels:
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
        version: 0.0.2
    spec:
      serviceAccountName: notification-service
      containers:
        - name: notification-service
          image: "redestroyder/notification-service:0.0.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: final
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        version: 0.0.3
    spec:
      serviceAccountName: order-service
      containers:
        - name: order-service
          image: "redestroyder/order-service:0.0.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
