KubernetesDeployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: final
  labels:
    app: billing

spec:
  type: ClusterIP
  selector:
    app: billing
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: final
  labels:
    app: order

spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: final
  labels:
    app: notification

spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: final
  labels:
    app: auth

spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: final
  labels:
    app: product

spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: final
  labels:
    app: delivery

spec:
  type: ClusterIP
  selector:
    app: delivery
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
